Add some more style

--- a/form.html
+++ b/form.html
@@ -6,14 +6,15 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Join the Team | MDHL Registration Form</title>
     <link rel="shortcut icon" href="./assets/img/favicon.ico" type="image/x-icon">
-    <link rel="stylesheet" href="css/style3.css">
+    <!-- <link rel="stylesheet" href="css/style3.css"> -->
+    <link rel="stylesheet" href="css/style4.css">
 </head>
 
 <body>
     <header>
         <div class="container-title">
-            <h1>Mighty Ducks Hockey League</h1>
             <img id="logo" src="./assets/img/logo-corto.png" alt="MDHL logo">
+            <h1>Mighty Ducks Hockey League</h1>
         </div>
         <figure>
             <img id="banner1" src="./assets/img/banner-1.jpg" alt="banner">
