--- a/game_info.html
+++ b/game_info.html
@@ -6,14 +6,15 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Game Information | MDHL Season Schedule</title>
     <link rel="shortcut icon" href="assets/img/favicon.ico" type="image/x-icon">
-    <link rel="stylesheet" href="css/style3.css">
+    <!-- <link rel="stylesheet" href="css/style3.css"> -->
+    <link rel="stylesheet" href="css/style4.css">
 </head>
 
 <body>
     <header>
         <div class="container-title">
-            <h1>Mighty Ducks Hockey League</h1>
             <img id="logo" src="./assets/img/logo-corto.png" alt="MDHL logo">
+            <h1>Mighty Ducks Hockey League</h1>
         </div>
         <figure>
             <img id="banner1" src="./assets/img/banner-1.jpg" alt="banner">
@@ -34,126 +35,131 @@
         <section class="main-title">
             <h2>Fall Schedule</h2>
         </section>
-        <div class="game_info">
-            <table id="table-game_info">
-                <caption>* All games take place on Saturday.</caption>
-                <colgroup>
-                    <col span="1" id="col-1">
-                    <col span="1" id="col-2">
-                    <col span="1" id="col-3">
-                    <col span="1" id="col-4">
-                <thead>
-                    <tr>
-                        <th>SEPTEMBER</th>
-                        <th>Teams</th>
-                        <th class="location">Location</th>
-                        <th>Times</th>
-                    </tr>
-                </thead>
-                <tbody>
-                    <tr>
-                        <td class="date" rowspan="2">9/01</td>
-                        <td>U1 and U4</td>
-                        <td class="schools">AJ Katzenmaier <a class="a-maps" href="#ajk">See location</a></td>
-                        <td>9:30 am.</td>
-                    </tr>
-                    <tr>
-                        <td class="teams">U3 and U2</td>
-                        <td class="schools">Greenbay <a class="a-maps" href="#green">See location</a></td>
-                        <td>1:00 pm.</td>
-                    </tr>
-                    <tr>
-                        <td class="date" rowspan="2">9/08</td>
-                        <td>U5 and U6</td>
-                        <td class="schools">Howard A Yeager <a class="a-maps" href="#hay">See location</a></td>
-                        <td>9:30 am.</td>
-                    </tr>
-                    <tr>
-                        <td class="teams">U6 and U1</td>
-                        <td class="schools">Marjorie P Hart <a class="a-maps" href="#mph">See location</a></td>
-                        <td>1:00 pm.</td>
-                    </tr>
-                    <tr>
-                        <td class="date" rowspan="2">9/15</td>
-                        <td>U2 and U4</td>
-                        <td class="schools">North <a class="a-maps" href="#north">See location</a></td>
-                        <td>9:30 am.</td>
-                    </tr>
-                    <tr>
-                        <td class="teams">U3 and U5</td>
-                        <td class="schools">AJ Katzenmaier <a class="a-maps" href="#ajk">See location</a></td>
-                        <td>1:00 pm.</td>
-                    </tr>
-                    <tr>
-                        <td class="date" rowspan="2">9/22</td>
-                        <td>U1 and U3</td>
-                        <td class="schools">South <a class="a-maps" href="#south">See location</a></td>
-                        <td>9:30 am.</td>
-                    </tr>
-                    <tr>
-                        <td class="teams">U2 and U6</td>
-                        <td class="schools">Howard A Yeager <a class="a-maps" href="#hay">See location</a></td>
-                        <td>1:00 pm.</td>
-                    </tr>
-                    <tr>
-                        <td class="date">9/29</td>
-                        <td>U4 and U5</td>
-                        <td class="schools">Greenbay <a class="a-maps" href="#green">See location</a></td>
-                        <td>9:30 am.</td>
-                    </tr>
-                </tbody>
-            </table>
-        </div>
-        <div class="maps">
-            <div id="ajk">
-                <iframe
-                    src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d2607.738729736051!2d-87.63033194632031!3d41.900101882834534!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x880fd34e07f69da7%3A0x15e198c063fc787c!2sAJ%20Katzenmaier%20Elementary!5e0!3m2!1ses-419!2sar!4v1691950451975!5m2!1ses-419!2sar"
-                    width="300" height="250" allowfullscreen="" loading="lazy"
-                    referrerpolicy="no-referrer-when-downgrade"></iframe>
+        <section class="game_info">
+            <div class="table-info">
+                <table id="table-game_info">
+                    <caption>* All games take place on Saturday.</caption>
+                    <colgroup>
+                        <col span="1" id="col-1">
+                        <col span="1" id="col-2">
+                        <col span="1" id="col-3">
+                        <col span="1" id="col-4">
+                    <thead>
+                        <tr>
+                            <th>SEPTEMBER</th>
+                            <th>Teams</th>
+                            <th class="location">Location</th>
+                            <th>Times</th>
+                        </tr>
+                    </thead>
+                    <tbody>
+                        <tr>
+                            <td class="date" rowspan="2">9/01</td>
+                            <td>U1 and U4</td>
+                            <td class="schools">AJ Katzenmaier <a class="a-maps" href="#ajk">See location</a></td>
+                            <td>9:30 am.</td>
+                        </tr>
+                        <tr>
+                            <td class="teams">U3 and U2</td>
+                            <td class="schools">Greenbay <a class="a-maps" href="#green">See location</a></td>
+                            <td>1:00 pm.</td>
+                        </tr>
+                        <tr>
+                            <td class="date" rowspan="2">9/08</td>
+                            <td>U5 and U6</td>
+                            <td class="schools">Howard A Yeager <a class="a-maps" href="#hay">See location</a></td>
+                            <td>9:30 am.</td>
+                        </tr>
+                        <tr>
+                            <td class="teams">U6 and U1</td>
+                            <td class="schools">Marjorie P Hart <a class="a-maps" href="#mph">See location</a></td>
+                            <td>1:00 pm.</td>
+                        </tr>
+                        <tr>
+                            <td class="date" rowspan="2">9/15</td>
+                            <td>U2 and U4</td>
+                            <td class="schools">North <a class="a-maps" href="#north">See location</a></td>
+                            <td>9:30 am.</td>
+                        </tr>
+                        <tr>
+                            <td class="teams">U3 and U5</td>
+                            <td class="schools">AJ Katzenmaier <a class="a-maps" href="#ajk">See location</a></td>
+                            <td>1:00 pm.</td>
+                        </tr>
+                        <tr>
+                            <td class="date" rowspan="2">9/22</td>
+                            <td>U1 and U3</td>
+                            <td class="schools">South <a class="a-maps" href="#south">See location</a></td>
+                            <td>9:30 am.</td>
+                        </tr>
+                        <tr>
+                            <td class="teams">U2 and U6</td>
+                            <td class="schools">Howard A Yeager <a class="a-maps" href="#hay">See location</a></td>
+                            <td>1:00 pm.</td>
+                        </tr>
+                        <tr>
+                            <td class="date">9/29</td>
+                            <td>U4 and U5</td>
+                            <td class="schools">Greenbay <a class="a-maps" href="#green">See location</a></td>
+                            <td>9:30 am.</td>
+                        </tr>
+                    </tbody>
+                </table>
             </div>
-            <div id="green">
-                <iframe
-                    src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2478.688494092469!2d-87.63797052602845!3d41.91362709486923!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x880fd3407260c45b%3A0xb351205fae50c6f3!2sGreenbay%20Elementary!5e0!3m2!1ses-419!2sar!4v1691951129688!5m2!1ses-419!2sar"
-                    width="300" height="250" allowfullscreen="" loading="lazy"
-                    referrerpolicy="no-referrer-when-downgrade"></iframe>
+            <div class="maps">
+                <div id="ajk">
+                    <iframe
+                        src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d2607.738729736051!2d-87.63033194632031!3d41.900101882834534!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x880fd34e07f69da7%3A0x15e198c063fc787c!2sAJ%20Katzenmaier%20Elementary!5e0!3m2!1ses-419!2sar!4v1691950451975!5m2!1ses-419!2sar"
+                        width="300" height="250" allowfullscreen="" loading="lazy"
+                        referrerpolicy="no-referrer-when-downgrade"></iframe>
+                </div>
+                <div id="green">
+                    <iframe
+                        src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2478.688494092469!2d-87.63797052602845!3d41.91362709486923!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x880fd3407260c45b%3A0xb351205fae50c6f3!2sGreenbay%20Elementary!5e0!3m2!1ses-419!2sar!4v1691951129688!5m2!1ses-419!2sar"
+                        width="300" height="250" allowfullscreen="" loading="lazy"
+                        referrerpolicy="no-referrer-when-downgrade"></iframe>
+                </div>
+                <div id="hay">
+                    <iframe
+                        src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2041.447187875198!2d-87.85463652140488!3d42.315645348596654!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x880feccac26b07c5%3A0x8b51fa5d6efe771a!2sHoward%20A.%20Yeager%20School%20(PREK-K)!5e0!3m2!1ses-419!2sar!4v1691951431155!5m2!1ses-419!2sar"
+                        width="300" height="250" allowfullscreen="" loading="lazy"
+                        referrerpolicy="no-referrer-when-downgrade"></iframe>
+                </div>
+                <div id="mph">
+                    <iframe
+                        src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2968.2896540149695!2d-87.64854762420912!3d41.92962686218685!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x880fd30f2637f9d7%3A0xdbff5d5dfcfcfa35!2sMarjorie%20P%20Hart%20Elementary!5e0!3m2!1ses-419!2sar!4v1691951643553!5m2!1ses-419!2sar"
+                        width="300" height="250" allowfullscreen="" loading="lazy"
+                        referrerpolicy="no-referrer-when-downgrade"></iframe>
+                </div>
+                <div id="north">
+                    <iframe
+                        src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2947.7596649075986!2d-87.83701992418698!3d42.36896093453967!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x880fed60b13aa0a7%3A0xfe6df83b0f197ed6!2sNorth%20Elementary%20School!5e0!3m2!1ses-419!2sar!4v1691951861145!5m2!1ses-419!2sar"
+                        width="300" height="250" allowfullscreen="" loading="lazy"
+                        referrerpolicy="no-referrer-when-downgrade"></iframe>
+                </div>
+                <div id="south">
+                    <iframe
+                        src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2950.1935233501567!2d-87.8571679241896!3d42.31707093781684!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x880feccac2135a21%3A0x8ce88e90b96bbec1!2sSouth%20Elementary%20School%20(K-5)!5e0!3m2!1ses-419!2sar!4v1691951955359!5m2!1ses-419!2sar"
+                        width="300" height="250" allowfullscreen="" loading="lazy"
+                        referrerpolicy="no-referrer-when-downgrade"></iframe>
+                </div>
             </div>
-            <div id="hay">
-                <iframe
-                    src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2041.447187875198!2d-87.85463652140488!3d42.315645348596654!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x880feccac26b07c5%3A0x8b51fa5d6efe771a!2sHoward%20A.%20Yeager%20School%20(PREK-K)!5e0!3m2!1ses-419!2sar!4v1691951431155!5m2!1ses-419!2sar"
-                    width="300" height="250" allowfullscreen="" loading="lazy"
-                    referrerpolicy="no-referrer-when-downgrade"></iframe>
+            <div class="container-game_info">
+                <p><strong>Facility Type:&nbsp;</strong>Outdoor</p>
+                <p><strong>Additional Information:&nbsp;</strong> If deemed necessary by MDHL games may be shortened or
+                    cancelled due to extreme weather conditions.</p>
             </div>
-            <div id="mph">
-                <iframe
-                    src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2968.2896540149695!2d-87.64854762420912!3d41.92962686218685!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x880fd30f2637f9d7%3A0xdbff5d5dfcfcfa35!2sMarjorie%20P%20Hart%20Elementary!5e0!3m2!1ses-419!2sar!4v1691951643553!5m2!1ses-419!2sar"
-                    width="300" height="250" allowfullscreen="" loading="lazy"
-                    referrerpolicy="no-referrer-when-downgrade"></iframe>
+            <div class="contact-game_info">
+                    <p></p><strong>Please direct all questions to:&nbsp;</strong>Michael Randall,
+                    League
+                    Coordinator</p>
+                <div id="contact-columns">
+                    <p class="phone"><strong>Phone:</strong>&nbsp;(630) 690-8132</p>
+                    <p><strong>Email:</strong><a class="link"
+                            href="mailto:michael.randall@chihockey.org">&nbsp;michael.randall@chihockey.org</a></p>
+                </div>
             </div>
-            <div id="north">
-                <iframe
-                    src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2947.7596649075986!2d-87.83701992418698!3d42.36896093453967!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x880fed60b13aa0a7%3A0xfe6df83b0f197ed6!2sNorth%20Elementary%20School!5e0!3m2!1ses-419!2sar!4v1691951861145!5m2!1ses-419!2sar"
-                    width="300" height="250" allowfullscreen="" loading="lazy"
-                    referrerpolicy="no-referrer-when-downgrade"></iframe>
-            </div>
-            <div id="south">
-                <iframe
-                    src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2950.1935233501567!2d-87.8571679241896!3d42.31707093781684!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x880feccac2135a21%3A0x8ce88e90b96bbec1!2sSouth%20Elementary%20School%20(K-5)!5e0!3m2!1ses-419!2sar!4v1691951955359!5m2!1ses-419!2sar"
-                    width="300" height="250" allowfullscreen="" loading="lazy"
-                    referrerpolicy="no-referrer-when-downgrade"></iframe>
-            </div>
-        </div>
-        <div class="container-game_info">
-            <p><strong>Facility Type:&nbsp;</strong>Outdoor</p>
-            <p><strong>Additional Information:&nbsp;</strong> If deemed necessary by MDHL games may be shortened or
-                cancelled due to extreme weather conditions.</p>
-            <p class="contact-game_info"><strong>Please direct all questions to:&nbsp;</strong>Michael Randall, League
-                Coordinator</p>
-            <div id="contact-columns">
-                <p><strong>Phone:</strong>&nbsp;(630) 690-8132</p>
-                <p><strong>Email:</strong><a class="link"
-                        href="mailto:michael.randall@chihockey.org">&nbsp;michael.randall@chihockey.org</a></p>
-            </div>
-        </div>
+        </section>
     </main>
 
 
