--- a/rules.html
+++ b/rules.html
@@ -6,14 +6,15 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Rules | MDHL Rules of Play & Policies</title>
     <link rel="shortcut icon" href="assets/img/favicon.ico" type="image/x-icon">
-    <link rel="stylesheet" href="css/style3.css">
+    <!-- <link rel="stylesheet" href="css/style3.css"> -->
+    <link rel="stylesheet" href="css/style4.css">
 </head>
 
 <body>
     <header>
         <div class="container-title">
-            <h1>Mighty Ducks Hockey League</h1>
             <img id="logo" src="./assets/img/logo-corto.png" alt="MDHL logo">
+            <h1>Mighty Ducks Hockey League</h1>
         </div>
         <figure>
             <img id="banner1" src="./assets/img/banner-1.jpg" alt="banner">
@@ -38,7 +39,7 @@
         <section class="rules">
             <h3 id="rules-title">Rules</h3>
             <div class="rules-article">
-                <article>
+                <article id="smship">
                     <h3>SPORTMANSHIP</h3>
                     <p>
                         The common interest that members of the Association share is to inspire
@@ -48,7 +49,7 @@
                         background, expertise, accomplishments, or standing.
                     </p>
                 </article>
-                <article>
+                <article id="ihf">
                     <h3>IHF FIELD REGULATIONS</h3>
                     <ol class="list-rules">
                         <li><strong>DIMENSIONS.</strong> IHF Law 1 provides for flexible external field dimensions
@@ -74,7 +75,7 @@
                         </li>
                     </ol>
                 </article>
-                <article>
+                <article id="allplay">
                     <h3>ALL-PLAY</h3>
                     <p>
                         All-play means that every recreation player on every team shall play atleast
