--- a/about.html
+++ b/about.html
@@ -6,14 +6,15 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>About | MDHL Information</title>
     <link rel="shortcut icon" href="./assets/img/favicon.ico" type="image/x-icon">
-    <link rel="stylesheet" href="css/style3.css">
+    <!-- <link rel="stylesheet" href="css/style3.css"> -->
+    <link rel="stylesheet" href="css/style4.css">
 </head>
 
 <body>
     <header>
         <div class="container-title">
-            <h1>Mighty Ducks Hockey League</h1>
             <img id="logo" src="./assets/img/logo-corto.png" alt="MDHL logo">
+            <h1>Mighty Ducks Hockey League</h1>
         </div>
         <figure>
             <img id="banner1" src="./assets/img/banner-1.jpg" alt="banner">
@@ -34,23 +35,23 @@
             <h2>About MDHL</h2>
         </section>
         <div class="about">
-            <figure>
+            <!-- <figure> -->
                 <img src="./assets/img/hockey-2.jpg" alt="Picture of Sheena Monningham">
-            </figure>
+            <!-- </figure> -->
             <div class="article-about">
-                <article>
+                <article id="art-out1">
                     <h3>Mision</h3>
                     <p>To support young athletes living Chicago's northside neighborhood, who have an interest in
                         learning
                         and playing soccer, with opportunities to learn and practice skills related to the game of
                         hockey, specifically those skills around team cooperation and good sportsmanship.</p>
                 </article>
-                <article>
+                <article id="art-out2">
                     <h3>Vision</h3>
                     <p>The Mighty Ducks Hockey League aspires to develop strong, well-rounded and mindful athletes
                         through the building of character, self-discipline, and leadership.</p>
                 </article>
-                <article>
+                <article id="art-out3">
                     <h3>General Information</h3>
                     <p>The Mighty Ducks Soccer League was established in 1996 to provide athletes residing
                         Chicago's northside neighborhoods an environment in which to learn and play hockey. To be a
