--- a/contact.html
+++ b/contact.html
@@ -6,14 +6,15 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Contact | Get in touch with the MDHL</title>
     <link rel="shortcut icon" href="./assets/img/favicon.ico" type="image/x-icon">
-    <link rel="stylesheet" href="css/style3.css">
+    <!-- <link rel="stylesheet" href="css/style3.css"> -->
+    <link rel="stylesheet" href="css/style4.css">
 </head>
 
 <body>
     <header>
         <div class="container-title">
-            <h1>Mighty Ducks Hockey League</h1>
             <img id="logo" src="./assets/img/logo-corto.png" alt="MDHL logo">
+            <h1>Mighty Ducks Hockey League</h1>
         </div>
         <figure>
             <img id="banner1" src="./assets/img/banner-1.jpg" alt="banner">
@@ -35,15 +36,15 @@
             <h2>Contact</h2>
         </section>
         <div class="contact">
-            <figure>
-                <img id="bigger-picture" src="./assets/img/hockey-3.jpg"
+            <!-- <figure> -->
+                <img src="./assets/img/hockey-3.jpg"
                     alt="Picture of Helena Gutierrez and Cassidy 'Rocketfire' Chasez">
-            </figure>
+            <!-- </figure> -->
             <div class="article-contact">
-                <div>
+                <div id="p-con1">
                     <p> Please email us at <a class="link" href="mailto:mdhl@chihockey.org">mdhl@chihockey.org</a></p>
                 </div>
-                <div>
+                <div id="p-con2">
                     <p>We reply to your email as soon as we can.</p>
                 </div>
             </div>
