--- a/index.html
+++ b/index.html
@@ -6,14 +6,15 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Home | MDHL Official Website</title>
     <link rel="shortcut icon" href="assets/img/favicon.ico" type="image/x-icon">
-    <link rel="stylesheet" href="css/style3.css">
+    <!-- <link rel="stylesheet" href="css/style3.css"> -->
+    <link rel="stylesheet" href="css/style4.css">
 </head>
 
 <body>
     <header>
         <div class="container-title">
-            <h1>Mighty Ducks Hockey League</h1>
             <img id="logo" src="./assets/img/logo-corto.png" alt="MDHL logo">
+            <h1>Mighty Ducks Hockey League</h1>
         </div>
         <figure>
             <img id="banner1" src="./assets/img/banner-1.jpg" alt="banner">
@@ -35,19 +36,19 @@
             <h2>Upcoming Events</h2>
         </section>
         <div class="events">
-            <figure>
+            <!-- <figure> -->
                 <img src="./assets/img/hockey-1.jpg" alt="Picture of Sidney 'Thunderbolt' Logan">
-            </figure>
+            <!-- </figure> -->
             <div class="article-home">
-                <article>
+                <article id="art-dex1">
                     <h3>August 4</h3>
                     <p>MDSL Fundraiser</p>
                 </article>
-                <article>
+                <article id="art-dex2">
                     <h3>August 16</h3>
                     <p>Season Kick-off: Meet the Teams</p>
                 </article>
-                <article>
+                <article id="art-dex3">
                     <h3>September 1</h3>
                     <p>First Game of the Season (Check Game Schedule for details)</p>
                 </article>
